{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 9,
  "lineage": "84613f78-7314-d73e-70a4-c3967b1c02f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:loadbalancer/app/chatty-app-server-default-alb/8196966e4ee5f682",
            "arn_suffix": "app/chatty-app-server-default-alb/8196966e4ee5f682",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "chatty-app-server-default-alb-21438152.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:loadbalancer/app/chatty-app-server-default-alb/8196966e4ee5f682",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "chatty-app-server-default-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-079ba0b558ea04b8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bb81aef7b4a4ad2"
              },
              {
                "subnet_id": "subnet-0b508a28900623a24"
              }
            ],
            "subnets": [
              "subnet-03bb81aef7b4a4ad2",
              "subnet-0b508a28900623a24"
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-ALB",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-ALB",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:listener/app/chatty-app-server-default-alb/8196966e4ee5f682/bc27a2d380f90d99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:listener/app/chatty-app-server-default-alb/8196966e4ee5f682/bc27a2d380f90d99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:loadbalancer/app/chatty-app-server-default-alb/8196966e4ee5f682",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "alb_https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:targetgroup/chatty-app-server-default-tg/16cfaceb13d1a862",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:listener-rule/app/chatty-app-server-default-alb/8196966e4ee5f682/bc27a2d380f90d99/1b6bd74a1c631303",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:listener-rule/app/chatty-app-server-default-alb/8196966e4ee5f682/bc27a2d380f90d99/1b6bd74a1c631303",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:listener/app/chatty-app-server-default-alb/8196966e4ee5f682/bc27a2d380f90d99",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_alb_listener.alb_http_listener",
            "aws_alb_target_group.server_backend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "server_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:targetgroup/chatty-app-server-default-tg/16cfaceb13d1a862",
            "arn_suffix": "targetgroup/chatty-app-server-default-tg/16cfaceb13d1a862",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 120,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 100,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:targetgroup/chatty-app-server-default-tg/16cfaceb13d1a862",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:821991577879:loadbalancer/app/chatty-app-server-default-alb/8196966e4ee5f682"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "chatty-app-server-default-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "cookie_name": "session",
                "enabled": true,
                "type": "app_cookie"
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-tg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-tg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be89f9f191e59e3",
            "association_id": "eipassoc-074f5b38755e0379c",
            "domain": "vpc",
            "id": "eipalloc-09be89f9f191e59e3",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0102581216055db06",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-139-113-89.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.113.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-eip",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-eip",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:internet-gateway/igw-079f667a8dcb22369",
            "id": "igw-079f667a8dcb22369",
            "owner_id": "821991577879",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-vpc-igw",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-vpc-igw",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be89f9f191e59e3",
            "association_id": "eipassoc-074f5b38755e0379c",
            "connectivity_type": "public",
            "id": "nat-00992fda2342922d8",
            "network_interface_id": "eni-0102581216055db06",
            "private_ip": "10.0.1.50",
            "public_ip": "18.139.113.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03bb81aef7b4a4ad2",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-nat-gw",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-nat-gw",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "piblic_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079f667a8dcb22369",
            "id": "r-rtb-029406285696334091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02940628569633409",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005956fe04a31c40a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00992fda2342922d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005956fe04a31c40a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:route-table/rtb-005956fe04a31c40a",
            "id": "rtb-005956fe04a31c40a",
            "owner_id": "821991577879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00992fda2342922d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-RT",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-RT",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:route-table/rtb-02940628569633409",
            "id": "rtb-02940628569633409",
            "owner_id": "821991577879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079f667a8dcb22369",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-RT",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-RT",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f046d3c172bb6d",
            "route_table_id": "rtb-005956fe04a31c40a",
            "subnet_id": "subnet-0b59d98ca63b1ce0f"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0381332f4471ae1cb",
            "route_table_id": "rtb-005956fe04a31c40a",
            "subnet_id": "subnet-003639e9fcd9d51bc"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04852e4d35295a1b5",
            "route_table_id": "rtb-02940628569633409",
            "subnet_id": "subnet-03bb81aef7b4a4ad2"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286cc5d068ad2015",
            "route_table_id": "rtb-02940628569633409",
            "subnet_id": "subnet-0b508a28900623a24"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:security-group/sg-079ba0b558ea04b8e",
            "description": "Allows traffic through the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079ba0b558ea04b8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTP traffic to load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows HTTPS traffic to load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "chatty-app-server-default-alb-sg",
            "name_prefix": "",
            "owner_id": "821991577879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-alb-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-alb-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:security-group/sg-0591c65e96b651722",
            "description": "Allows internet access for instances lauched with ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0591c65e96b651722",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows HTTP traffic into webserver",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079ba0b558ea04b8e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allows HTTPS traffic into webserver",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079ba0b558ea04b8e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079ba0b558ea04b8e"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to webserver through bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0527ee08da665955a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatty-app-server-default-autoscaling-group-sg",
            "name_prefix": "",
            "owner_id": "821991577879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-autoscaling-group-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-autoscaling-group-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:security-group/sg-0527ee08da665955a",
            "description": "Allows SSH into bastion host instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0527ee08da665955a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.10.2/32"
                ],
                "description": "Allows SSH into bastion host instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatty-app-server-default-bastion-host-sg",
            "name_prefix": "",
            "owner_id": "821991577879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-bastion-host-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-bastion-host-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:security-group/sg-08fa2bdc98e90a5e0",
            "description": "Allows access to elasticache service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08fa2bdc98e90a5e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through ASG",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0591c65e96b651722"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allows access to redis server through bastion host",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0527ee08da665955a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "chatty-app-server-default-elasticache-sg",
            "name_prefix": "",
            "owner_id": "821991577879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-elasticache-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-elasticache-sg",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.autoscaling_group_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:subnet/subnet-0b59d98ca63b1ce0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b59d98ca63b1ce0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821991577879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-1a",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-1a",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:subnet/subnet-003639e9fcd9d51bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003639e9fcd9d51bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821991577879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-1b",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-private-1b",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:subnet/subnet-03bb81aef7b4a4ad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bb81aef7b4a4ad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821991577879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-1a",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-1a",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:subnet/subnet-0b508a28900623a24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b508a28900623a24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821991577879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-1b",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default-public-1b",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "vpc_id": "vpc-02b6a622aab8d9ea1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:821991577879:vpc/vpc-02b6a622aab8d9ea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be0c41f92feb1d8f",
            "default_route_table_id": "rtb-0a1477b716945a040",
            "default_security_group_id": "sg-0a771c1e14d546622",
            "dhcp_options_id": "dopt-121bdb74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b6a622aab8d9ea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1477b716945a040",
            "owner_id": "821991577879",
            "tags": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "Terraform",
              "Name": "chatty-app-server-default",
              "Owner": "Joestar",
              "Project": "chatty-app-server"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}